Baseline 1 Header et Footer

--- a/ValorantProject/src/app/footer/footer.component.html
+++ b/ValorantProject/src/app/footer/footer.component.html
@@ -1,1 +1,33 @@
-<p>footer works!</p>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+</head>
+<footer class="bg-dark text-light py-5">
+    <div class="container">
+        <div class="row">
+            <!-- Section 1: Logo et Description -->
+            <div class="col-md-6">
+                <h5 class="text-danger fw-bold">VALORANT</h5>
+                <p class="text-muted">Le jeu tactique qui réunit des agents et des stratégies. Plongez dans l'univers de
+                    VALORANT et découvrez une nouvelle manière de jouer.</p>
+            </div>
+
+            <!-- Section 3: Réseaux sociaux -->
+            <div class="col-md-6">
+                <h5 class="text-danger">Suivez-nous</h5>
+                <ul class="list-unstyled d-flex">
+                    <li><a href="https://fr.wikipedia.org/wiki/Les_Simpson" class="text-light me-3"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC4439244/#:~:text=L'%C3%A9jaculation%20pr%C3%A9coce%20est%20une,patients%20et%20de%20leur%20partenaire." class="text-light me-3"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Amember%3A50540522&keywords=fr%C3%A9d%C3%A9ric%20chauchon&origin=RICH_QUERY_SUGGESTION&position=0&sid=f!f&spellCorrectionEnabled=false" class="text-light me-3"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://fr.wikipedia.org/wiki/Strangulation#:~:text=La%20strangulation%20ou%20l'%C3%A9tranglement,puis%20la%20mort%20par%20asphyxie." class="text-light me-3"><i class="fab fa-youtube"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Section 4: Copyright -->
+        <div class="row mt-4">
+            <div class="col text-center">
+                <p class="text-muted mb-0">&copy; 2025 VALORANT. Tous droits réservés.</p>
+            </div>
+        </div>
+    </div>
+</footer>
