--- a/ValorantProject/src/app/header/header.component.html
+++ b/ValorantProject/src/app/header/header.component.html
@@ -1,1 +1,28 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg">
+    <div class="container">
+      <a class="navbar-brand text-danger fw-bold" href="#">VALORANT</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home" routerLinkActive="gras">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/agents" routerLinkActive="gras">Agents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/maps" routerLinkActive="gras">Maps</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/my-banners" routerLinkActive="gras">My Banners</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/about" routerLinkActive="gras">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
