--- a/ValorantProject/src/app/header/header.component.css
+++ b/ValorantProject/src/app/header/header.component.css
@@ -32,9 +32,7 @@ ul {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    /* Espace entre les éléments */
     list-style: none;
-    /* Enlever les puces */
     padding: 0;
     margin: 0;
 }
@@ -47,3 +45,24 @@ ul {
 .font-valorant {
     font-family: 'Valorant', sans-serif;
 }
+.navbar {
+    justify-content: space-between;
+  }
+  
+  .navbar-brand {
+    margin-right: auto; 
+  }
+  
+  .navbar-nav {
+    margin: 0 auto; 
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  
+  .navbar-collapse {
+    display: flex;
+    justify-content: center;
+  }.nav-item {
+    padding: 0 2%; 
+  }
