--- a/ValorantProject/src/app/maps/maps.component.html
+++ b/ValorantProject/src/app/maps/maps.component.html
@@ -20,7 +20,7 @@
             <div class="col-3">
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <div class="imageMap" (click)="selectMap(item)">
+                        <div class="imageMap" (click)="selectMap(item.id)">
                             <img class="grows rounded-image" [src]="item.image" height="200px" />
                         </div>
                     </div>
