--- a/ValorantProject/src/app/header/header.component.css
+++ b/ValorantProject/src/app/header/header.component.css
@@ -45,24 +45,31 @@ ul {
 .font-valorant {
     font-family: 'Valorant', sans-serif;
 }
+
 .navbar {
     justify-content: space-between;
-  }
-  
-  .navbar-brand {
-    margin-right: auto; 
-  }
-  
-  .navbar-nav {
-    margin: 0 auto; 
+}
+
+.navbar-brand {
+    margin-right: auto;
+}
+
+.navbar-nav {
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     width: 100%;
-  }
-  
-  .navbar-collapse {
+}
+
+.navbar-collapse {
     display: flex;
     justify-content: center;
-  }.nav-item {
-    padding: 0 2%; 
-  }
+}
+
+.nav-item {
+    padding: 0 2%;
+}
+
+.nav-link-active {
+    color: #ff5050 !important;
+}
