--- a/ValorantProject/src/app/header/header.component.html
+++ b/ValorantProject/src/app/header/header.component.html
@@ -7,19 +7,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/home" routerLinkActive="gras">Accueil</a>
+            <a class="nav-link" routerLink="/home" routerLinkActive="gras nav-link-active">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/agents" routerLinkActive="gras">Agents</a>
+            <a class="nav-link" routerLink="/agents" routerLinkActive="gras nav-link-active">Agents</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/maps" routerLinkActive="gras">Maps</a>
+            <a class="nav-link" routerLink="/maps" routerLinkActive="gras nav-link-active">Maps</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/my-banners" routerLinkActive="gras">My Banners</a>
+            <a class="nav-link" routerLink="/my-banners" routerLinkActive="gras nav-link-active">My Banners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about" routerLinkActive="gras">About</a>
+            <a class="nav-link" routerLink="/about" routerLinkActive="gras nav-link-active">About</a>
           </li>
         </ul>
       </div>
