--- a/ValorantProject/src/app/header/header.component.html
+++ b/ValorantProject/src/app/header/header.component.html
@@ -19,6 +19,9 @@
             <a class="nav-link" routerLink="/my-banners" routerLinkActive="gras nav-link-active">My Banners</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/games" routerLinkActive="gras nav-link-active">Let's play !</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/about" routerLinkActive="gras nav-link-active">About</a>
           </li>
         </ul>
