Feat: Map + Map-info

--- a/ValorantProject/src/app/header/header.component.html
+++ b/ValorantProject/src/app/header/header.component.html
@@ -16,10 +16,7 @@
             <a class="nav-link" routerLink="/maps" routerLinkActive="gras nav-link-active">Maps</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/my-banners" routerLinkActive="gras nav-link-active">My Banners</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/games" routerLinkActive="gras nav-link-active">Let's play !</a>
+            <a class="nav-link" routerLink="/game-agent" routerLinkActive="gras nav-link-active">Let's play !</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/about" routerLinkActive="gras nav-link-active">About</a>
