--- a/ValorantProject/src/app/map-info/map-info.component.css
+++ b/ValorantProject/src/app/map-info/map-info.component.css
@@ -7,14 +7,15 @@
 html, body {
     width: 100%;
     height: 100%;
-    overflow: hidden; /* Empêche tout débordement blanc */
+    overflow-x: hidden; /* Bloque seulement horizontalement */
+    overflow-y: auto; 
 }
 
 .background-container {
     background-size: cover; /* Couvre toute la page */
     background-repeat: no-repeat;
     background-position: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh; /* Assure que ça prend toute la hauteur */
     display: flex;
     justify-content: center;
@@ -32,10 +33,12 @@ html, body {
     margin:0px; 
     padding:0px; 
     position: relative;
+    overflow: hidden; /* <-- TRÈS IMPORTANT pour ne pas que la bannière dépasse */
 }
 
 .mini-map {
-    max-width: 600px; /* Ajuster pour qu'elles aient la même taille */
+    /*max-width: 600px;*/ /* Ajuster pour qu'elles aient la même taille */
+    width: 15em;
     height: auto;
     border-radius: 20px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
@@ -56,7 +59,7 @@ html, body {
     align-items: center;
     gap: 0; /* On supprime les espaces entre les éléments */
     width: fit-content;
-    margin-top: 3em;
+    margin-top: 5%;
 }
 
 .banner-horizontal {
@@ -77,7 +80,8 @@ html, body {
 
 /* Bannière verticale (à gauche, même taille que la mini-map) */
 .banner-vertical {
-    max-height: 600px;
+    /*max-height: 600px;*/
+    max-height: 15em;
     width: auto;
     border-radius: 15px;
 }
@@ -95,6 +99,23 @@ img{
     font : 2em 'Valorant', sans-serif;
     color: rgb(235, 203, 203);
 }
+
+.no-callouts-banner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg); /* AUTRE diagonale */
+    background-color: rgba(255, 0, 0, 0.8);
+    color: white;
+    padding: 1rem 3rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    pointer-events: none;
+    z-index: 10;
+    border-radius: 10px;
+    white-space: nowrap; /* Pas de retour à la ligne */
+  }
 
 
 
