--- a/ValorantProject/src/app/maps/maps.component.css
+++ b/ValorantProject/src/app/maps/maps.component.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     background-color: #1a1a1a;
     color: white;
+    overflow-x: hidden;
 }
 .title{
     padding: 1%;
@@ -30,63 +31,6 @@ header a:hover {
     color: #ff4655;
 }
 
-/* Style général du carrousel */
-.carousel-container {
-    position: relative;
-    width: 50%;
-    margin: 20px auto;
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.carousel {
-    display: flex;
-    transition: transform 0.5s ease;
-}
-
-.carousel-item {
-    min-width: 100%;
-    background: #2a2a2a;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 5px 5px 15px rgba(255, 70, 85, 0.5);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    position: relative;
-}
-
-.carousel-item img {
-    width: 80%;
-    /* Réduit la taille de l'image */
-    height: auto;
-    /* Garder le ratio de l'image */
-    border-radius: 10px;
-    position: relative;
-}
-
-.carousel-item h3 {
-    color: #ff4655;
-    font-size: 22px;
-    margin-top: 20px;
-}
-
-.carousel-item p {
-    color: #ccc;
-    font-size: 14px;
-    margin-top: 10px;
-}
-
-.carousel-item .regions {
-    font-size: 12px;
-    color: #ffcc00;
-    margin-top: 15px;
-    text-align: left;
-    padding-left: 20px;
-}
 
 .region-marker {
     position: absolute;
