All comments done

--- a/ValorantProject/src/app/agent-info/agent-info.component.html
+++ b/ValorantProject/src/app/agent-info/agent-info.component.html
@@ -1,3 +1,5 @@
+<!-- Page agent-info, ici on décrit chaque agent indépendament, leurs compétences et leur utilité dans une équipe 
+     Chaque agent a 3 compétences dont une ultime, ils ont tous un role différent aussi-->
 <body>
     <div class="title">
         <h1>Agent Details</h1>
@@ -10,28 +12,28 @@
       <div class="abilities">
         <h3>Competences :</h3>
         <div class="ability">
-          <img [src]="agent.abilitiesIcon[0]" alt="Cloudburst">
+          <img [src]="agent.abilitiesIcon[0]" alt="Compétence 1">
           <div>
             <strong>{{agent.abilitiesName[0]}}</strong>
             <p>{{agent.abilitiesDescription[0]}}</p>
           </div>
         </div>
         <div class="ability">
-          <img [src]="agent.abilitiesIcon[1]" alt="Updraft">
+          <img [src]="agent.abilitiesIcon[1]" alt="Compétence 2">
           <div>
             <strong>{{agent.abilitiesName[1]}}</strong>
             <p>{{agent.abilitiesDescription[1]}}</p>
           </div>
         </div>
         <div class="ability">
-          <img [src]="agent.abilitiesIcon[2]" alt="Tailwind">
+          <img [src]="agent.abilitiesIcon[2]" alt="Compétence 3">
           <div>
             <strong>{{agent.abilitiesName[2]}}</strong>
             <p>{{agent.abilitiesDescription[2]}}</p>
           </div>
         </div>
         <div class="ability">
-          <img [src]="agent.abilitiesIcon[3]" alt="Blade Storm">
+          <img [src]="agent.abilitiesIcon[3]" alt="Compétence Ultimate">
           <div>
             <strong>{{agent.abilitiesName[3]}}</strong>
             <p>{{agent.abilitiesDescription[3]}}</p>
