--- a/ValorantProject/src/app/maps/maps.component.html
+++ b/ValorantProject/src/app/maps/maps.component.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-
+<!-- Affichage des maps en général -->
+<!-- Ici on affiche toutes les maps, on peut cliquer sur une map pour avoir plus d'infos sur celle-ci  -->
 <body>
     <div class="title">
         <p>Valorant Maps</p>
