--- a/ValorantProject/src/app/header/header.component.html
+++ b/ValorantProject/src/app/header/header.component.html
@@ -1,3 +1,5 @@
+<!-- Navbar rien de plus classique-->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg">
     <div class="container">
       <a class="navbar-brand text-danger fw-bold" href="#">VALORANT</a>
