--- a/ValorantProject/src/app/about/about.component.css
+++ b/ValorantProject/src/app/about/about.component.css
@@ -35,3 +35,46 @@ h1, h2 {
 .emoji {
     font-size: 22px;
 }
+.developer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px; /* espace entre les cartes */
+    padding: 5% 0;
+    flex-wrap: wrap; /* pour que ça passe bien sur mobile */
+}
+
+.developer-card {
+    background: #2a2a2a;
+    box-shadow: 5px 5px 15px rgba(255, 70, 85, 0.5);
+    border-radius: 15px;
+    padding: 30px;
+    width: 280px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.3s ease,  0.3s ease;
+}
+
+.developer-card:hover {
+    transform: scale(1.1);
+    background: #3a3a3a;
+}
+
+.developer-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.developer-card h3 {
+    margin-bottom: 10px;
+    font-size: 1.8em;
+}
+
+.developer-card .role {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #ff4655;
+    text-transform: uppercase;
+}
